# soik-graph-expressiveness

./: README.md  block_graph_visualization.html  graph_visualization.html  requirements.txt  script.ps1
api_soik/: pyproject.toml  setup.py
api_soik/src/api/models/: edge.py  graph.py  node.py
api_soik/src/api/services/: loader.py  visualizer.py
assets/: json_data_1.json  json_primjer.json  xml_data_2.xml
block_visualizer/: MANIFEST.in  pyproject.toml
block_visualizer/src/visualizer/code/: block_visualization.py
block_visualizer/src/visualizer/static/: block_visualization.html
block_visualizer/visualizer/code/: block_visualization.py
block_visualizer/visualizer/static/: block_visualization.html
graph_explorer/: pyproject.toml  setup.py
graph_explorer/src/graph_explorer/: manage.py
graph_explorer/src/graph_explorer/graph_explorer/: asgi.py  settings.py  urls.py  wsgi.py
graph_explorer/src/graph_explorer/graph_visualizer/: apps.py  urls.py  views.py
graph_explorer/src/graph_explorer/graph_visualizer/static/: script.js  style.css
graph_explorer/src/graph_explorer/graph_visualizer/templates/: base.html  bird_view.html  index.html  workspace_modal.html
json_datasource/: pyproject.toml
json_datasource/src/json_parser/: parser.py
platform_soik/: pyproject.toml
platform_soik/src/platform_soik/: apps.py  config.py  models.py
platform_soik/src/platform_soik/filters/: basic_filter.py  filter.py  search.py
simple_visualizer/: pyproject.toml
simple_visualizer/src/visualizer/code/: simple_visualization.py
simple_visualizer/src/visualizer/static/: simple_visualization.html
simple_visualizer/visualizer/code/: simple_visualization.py
simple_visualizer/visualizer/static/: simple_visualization.html
xml_datasource/: pyproject.toml
xml_datasource/src/xml_parser/: parser.py
