[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "block_visualizer"
dynamic = ["version"]
dependencies = [
    "Jinja2==3.1.3",
]
requires-python = ">= 3.10"
authors = [
    {name = "Branislav Roljic"}
]

[project.entry-points."graph.visualization"]
block_visualizer="visualizer.code.block_visualization:BlockGraphVisualizer"
