[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_visualizer"
dynamic = ["version"]
dependencies = [
    "Jinja2==3.1.3",
]
requires-python = ">= 3.10"
authors = [
    {name = "Branislav Roljic"}
]

[project.entry-points."graph.visualization"]
simple_visualizer="visualizer.code.simple_visualization:SimpleGraphVisualizer"
