[project]
name = "xml-datasource"
dynamic = ["version"]

dependencies = [
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "selenium==3.3.0",
    "webdriver-manager==4.0.1",
]
requires-python = ">= 3.10"

authors = [
    {name = "Nikola Jovic"},
]

[project.entry-points."datasources"]
xml = "xml_parser.parser:XMLParser"