[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xml_datasource"
dynamic = ["version"]
dependencies =[ 
]
requires-python = ">= 3.10"
authors = [
    {name = "Nikola Jovic"},
]

[project.entry-points."graph.datasources"]
xml_datasource = "xml_parser.parser:XMLParser"